# Template-Service

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Json  README.md  pyproject.toml  schema.yml
config/: logging_config.py  settings.py  urls.py
template_service/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
template_service/migrations/: 0001_initial.py
